# autoware_tensorrt_vad

./: .clang-format  .clang-tidy  .flake8  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .yamllint  CPPLINT.cfg  LICENSE  README.md  build_depends_humble.repos
.cursor/rules/: cpp_naming_conventions.md
.github/workflows/: build-and-test-differential.yaml  build-and-test.yaml  pre-commit-autoupdate.yaml  pre-commit.yaml  test-build.yaml
autoware_tensorrt_vad/: CMakeLists.txt  package.xml
autoware_tensorrt_vad/include/autoware/tensorrt_vad/: utils.hpp  vad_config.hpp  vad_interface.hpp  vad_node.hpp  vad_trt.hpp
autoware_tensorrt_vad/lib/: vad_trt.cpp
autoware_tensorrt_vad/src/: vad_node.cpp
autoware_tensorrt_vad/test/: test_vad_model.cpp
docs/design/: coding_standards.md  vad_model.md
docs/how-to-use/: build.md  launch.md
tools/awsim-rosbag/: .gitignore  README.md  __main__.py  example_config.yaml  pyproject.toml
tools/awsim-rosbag/awsim_rosbag/: __init__.py  cli.py  convert_awsim_to_ns.py  converter.py  recorder.py  rosbag.py
tools/awsim-rosbag/config/: record_config_example.yaml
